about page, contact form validation, reCaptcha, google map and text content and few more

--- a/src/views/aboutTemplate.twig
+++ b/src/views/aboutTemplate.twig
@@ -7,8 +7,11 @@
 {% endblock title %}
 
 {% block head %}
+	
+	<meta name="description" content="Biographie de l'artiste peintre Jeanne-Marie Desmares. Découvrez le parcours de l'artiste, son envireonnement ainsi que sa source d'inspiration : la Corse.">
+	<link rel="stylesheet" type="text/css" href="assets/css/about.css">
 
-	{# RIEN POUR LE MOMENT #}
+	<script src='https://www.google.com/recaptcha/api.js'></script>
     
 {% endblock head %}
 
@@ -24,22 +27,34 @@
 			</header>
 
 			<!-- Content -->
-			<section>
+			<section class="about-section">
 				
 				<h3>Bio</h3>
-				<p><span class="image left"><img src="assets/img/paint-brushes-2.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.</p>
+				<p><span class="image left"><img src="assets/img/IMG_2743.jpg" alt="Artiste Jeanne-Marie Desmares" /></span>Jeanne-Marie Desmares est charentaise par son père et corse par sa mère, elle a grandi entre la Charente et la Corse, et fait l’école d’infirmière à Compiègne.<br>
+				Le crayon l’a toujours accompagnée dès son enfance, mais elle est autodidacte et c’est beaucoup plus tard, approchant les 50 ans que la peinture s’est imposée à elle comme une évidence.
+				Nadie Feuz a été son maître pendant 10 ans, peintre renommée, elle lui a tout appris, du b.a.ba technique jusqu’à l’art de la peinture au couteau. C’est à cette époque que Jeanne-Marie Desmares découvre l’onctuosité de la matière, les contrastes, les couleurs, les « valeurs », les transparences, comment aller à l’essentiel.<br>
+				La Corse a fait le reste, elle s’y installe et affirme son style, épurée et intense. L’huile et le couteau ont sa préférence. Elle peint les reflets des maisons au bord de l’eau, une ruelle, un village, une tour. L’île est une source illimitée d’inspiration. Elle se perfectionne aussi à l’aquarelle.
+				Jeanne-Marie Desmares peint maintenant depuis plus de 20 ans, elle travaille et expose à St Florent et réinterprète au fil des saisons les places et les fontaines.</p>
 				<h3>L'inspiration - La Corse</h3>
-				<p><span class="image right"><img src="assets/img/corse-1.jpg" alt="" /></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.</p>
+				<p><span class="image right"><img src="assets/img/corse-1.jpg" alt="" /></span>Comment parler de cet île sans répéter encore et encore qu'elle est de toute beauté. La peinture de Jeanne-Marie Desmares nous rappelle que la Corse est faite de diversité, de lumière de couleur et d'une intensité dont on ne sait pas si elle vient de l'autenticité des villages perchés, de sa nature sauvage et parfois innaccessible, de la couleur du ciel au coucher du soleil, de la variété des paysages. Jeanne-Marie par sa peinture, exprime à merveille cette intensité et par un travail de couleurs vives et contrastées, ses toiles transmettent ce sentiment profond de reconnaissance pour cette terre si généreuse.<br>
+				Saint Florent son village familiale à lui tout seul est une grande source d'inspiration. Des ruelles pavées, une fontaine, des maisons sur l'eau, une citadelle, le port de plaisance, les collines du Cap d'un coté, du désert des agriates de l'autre, un clocher, et cette lumière, encore elle, qui change sans cesse du matin au soir, du printemps à l'hiver, le temps lui aussi fait son oeuvre.<br>
+				Est-ce qu'il lui arrive de peindre autre chose ? Oui, mais c'est plus rare, vous verrez.</p>
+				<hr id="atelier">
 				<h3>L'Atelier</h3>
+				<p><div id="map"></div>Le village de saint Florent se trouve à 35 mn en voiture de Bastia sur la côte opposée. Situé au bord de l'eau, il a gardé son charme authentique. Le petit port de pêche est aujourd'hui un des plus beaux port de plaisance de Corse.<br>
+				L'atelier se trouve place Doria plus communément appelée « place de la fontaine ». Une fois devant la fontaine aux grenouilles, vous verrez un magnifique micocoulier, arbre centenaire qui offre une ombre divine pendant la saison chaude. Descendez trois marches, vous y êtes. Là se dresse la maison de l'artiste avec au rez-de-chaussée son atelier, un ancien pressoir à olive. L'endroit est paisible, ici vous ressentirez l'âme authentique des villages Corses.</p>
 
-				<p><span class="image left map"><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1935.1415011293943!2d9.300907532398458!3d42.67988180973625!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12d72e8ab4943943%3A0xfd41c3b272b61c87!2sPlace+Doria%2C+20217+Saint-Florent!5e0!3m2!1sfr!2sfr!4v1528976715846" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe></span>Fringilla nisl. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent. Donec accumsan interdum nisi, quis tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus. Integer ac pellentesque praesent tincidunt felis sagittis eget. tempus euismod. Vestibulum ante ipsum primis in faucibus vestibulum. Blandit adipiscing eu felis iaculis volutpat ac adipiscing accumsan eu faucibus.</p>
+				
+				
 			</section>
 
 			<hr id="contact" />
 
 			<section>
-				<p style="font-weight: bold; color: orange">Décaler le titre vers le bas pour éviter qu'il ne soit cacher lorsque l'on clique sur contact dans le menu</p>
 				<h3>Formulaire de contact</h3>
+				{% if msg is not null %}
+				<p id="mail-msg">{{ msg }}</p>
+				{% endif %}
 				<form method="post" action="index.php?action=contactMe" class="8u 12u$(medium)">
 					<div class="row uniform 50%">
 						<div class="6u 12u$(small)">
@@ -54,10 +69,7 @@
 						<div class="12u$">
 							<textarea name="message" id="message" placeholder="Message" rows="6" required></textarea>
 						</div>
-						<div class="6u$ 12u$(medium)">
-							<input type="checkbox" id="human" name="human" required>
-							<label for="human">Je ne suis pas un robot</label>
-						</div>
+						<div class="g-recaptcha" data-sitekey="6LeCJWIUAAAAAMSmN99tepnh6BSGjRS5QcqOgiF3"></div>
 						<div class="12u$">
 							<ul class="actions">
 								<li><input type="submit" value="Envoyer" class="special" /></li>
@@ -67,25 +79,17 @@
 					</div>
 				</form>
 			</section>
-
-
-			<h3>Image</h3>
-
-			<p style="font-weight: bold; color: orange">Pourquoi pas ajouter quelques Photo de Corse qui pouraient plaire ... ou alors en diaporama en entête de page ...</p> 
-				<h4>Fit</h4>
-				<div class="box alt">
-					<div class="row 50% uniform">
-						<div class="12u$"><span class="image fit"><img src="images/pic03.jpg" alt="" /></span></div>
-						<div class="4u"><span class="image fit"><img src="images/thumbs/01.jpg" alt="" /></span></div>
-						<div class="4u"><span class="image fit"><img src="images/thumbs/02.jpg" alt="" /></span></div>
-						<div class="4u$"><span class="image fit"><img src="images/thumbs/03.jpg" alt="" /></span></div>
-						<div class="4u"><span class="image fit"><img src="images/thumbs/04.jpg" alt="" /></span></div>
-						<div class="4u"><span class="image fit"><img src="images/thumbs/05.jpg" alt="" /></span></div>
-						<div class="4u$"><span class="image fit"><img src="images/thumbs/01.jpg" alt="" /></span></div>
-					</div>
-				</div>
-
 		</div>
 	</section>
     
 {% endblock main %}
+
+{% block script %}
+
+<!-- Scripts externes -->
+
+		<script type="text/javascript" src="assets/js/map.js"></script>
+
+    	<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBjqPCjOpEV8hRBuMNX56tT7bByOtBiuwk&callback=workshopMap.initMap" type="text/javascript"></script>
+    
+{% endblock %}
