--- a/src/views/blogPostContent.twig
+++ b/src/views/blogPostContent.twig
@@ -5,10 +5,10 @@
 
             
             
-    <div class="8u 12u$(medium)">
+    
 
     <!-- Content -->
-        <section id="content" class="post-main-content">    
+        <div class="post-main-content">    
             <div id="post">
                 <h3> {{ post.title }} </h3>
                 <p>Le {{ post.publication }}</p>
@@ -44,7 +44,8 @@
 
                 {% if comment.validated == false %}
 
-                <button class="button smal alt warning">Signaler</button>        
+                <a href="index.php?action=blog&amp;choice=report&amp;commentId={{comment.id}}&amp;postId={{post.id}}" disabled="disabled" ></a><button class="button smal alt warning" id="">Signaler</button>
+
                 {% endif %}
 
             </div>                    
@@ -82,18 +83,21 @@
                 <h3>Laissez un commentaire</h3>
 
                 <form method="post" action="index.php?action=addComment&amp;id={{ post.id }}">
+                    {% if msg is not null %}
+                    <p id="comment-msg">{{ msg }}</p>
+                    {% endif %}
                     <label for="name">Votre prénom : <input class="comment-form" type="text" name="name" id="name" placeholder="Mon Prénom" required></label>
                     <label for="comment">Votre commentaire :
                     <textarea class="comment-form" name="comment" id="comment" required></textarea></label>
-                    <input type="submit" value="Valider" class="button alt">
+                    <input type="submit" value="Valider" class="button small alt">
                 </form>
             
             </div>
 
             
 
-        </section>
-    </div>
+        </div>
+   
     
 {% endblock articles %}
 
