--- a/src/views/backoffice/templateAdminPosts.twig
+++ b/src/views/backoffice/templateAdminPosts.twig
@@ -27,7 +27,7 @@
 			<a href="index.php?action=adminPosts"><i class="fa fa-list"></i>Gerer mes articles</a>
 		</div>
 		<div class="content-link">
-			<a href="index.php?action=adminPosts&amp;choice=write"><i class="fa fa-pencil"></i>Ecrire un article</a>
+			<a href="index.php?action=adminPosts&amp;choice=writePost"><i class="fa fa-pencil"></i>Ecrire un article</a>
 		</div>
 
 		{% elseif choice == null %}
@@ -35,7 +35,7 @@
 		<h3 class="content-header">Mes Articles</h3>
 
 		<div class="content-link">
-			<a href="index.php?action=adminPosts&amp;choice=write"><i class="fa fa-pencil"></i>Ecrire un article</a>
+			<a href="index.php?action=adminPosts&amp;choice=writePost"><i class="fa fa-pencil"></i>Ecrire un article</a>
 		</div>          
 
 		{% endif %}
