--- a/src/views/backoffice/templateBackHome.twig
+++ b/src/views/backoffice/templateBackHome.twig
@@ -2,53 +2,46 @@
 
 {% block title %}
 
-	Espace administration
+    Espace administration
     
 {% endblock title %}
 
 
 {% block main %}
 
-	<div style="background-color: white">
-		<h4>Bienvenue Jeanne-Marie</h4>
-		<h5>Que souhaitez-vous faire ?</h5>
+    <div>
+        <h4>Bienvenue Jeanne-Marie</h4>
+        <h5>Que souhaitez-vous faire ?</h5>
 
-		<ul>
-			<li><a href="#">modifier les informmations d'un tableau</a></li>
-			<li><a href="#">Ajouter un tableau</a></li>
-			<li><a href="#">Gérer vos commentaires</a></li>
-			<li><a href="#">Ecrire un article</a></li>
-			<li><a href="#">Répondre à un commentaire</a></li>
-			<li><a href="#">Publier un article en attente</a></li>
-		</ul>
-	</div>
+        <ul>
+            <li><a href="index.php?action=adminPaintings">Modifier les informations d'un tableau</a></li>
+            <li><a href="index.php?action=addPainting">Ajouter un tableau</a></li>
+            <li><a href="#">Gérer vos commentaires</a></li>
+            <li><a href="index.php?action=adminPosts&amp;choice=writePost">Ecrire un article</a></li>
+            <li><a href="#">Répondre à un commentaire</a></li>
+            <li><a href="index.php?action=adminPosts">Publier un article en attente</a></li>
+        </ul>
+    </div>
 
-	<div>
-		<h5>Dernier article publié</h5>
+    <hr>
 
-		{% block lastPost %}
-		    
-		{% endblock %}
+    <div>
+        <h5>Dernier article publié</h5>
 
-	</div>
+        {% block lastPost %}
+            
+        {% endblock %}
 
-	<div>
-		<h5>Dernier commentaire reçu</h5>
+    </div>
 
-		{% block lastComment %}
-		    
-		{% endblock %}
+    <div>
+        <h5>Dernier commentaire reçu</h5>
 
-	</div>
-		
-	<div>
-		<h5>Dernier Like (Facultatif)</h5>
+        {% block lastComment %}
+            
+        {% endblock %}
 
-		{% block lastLike %}
-		    
-		{% endblock %}
-
-	</div>
-    
+    </div>
+        
 {% endblock main %}
-	
+    
