--- a/src/views/backoffice/contentAdminPaintings.twig
+++ b/src/views/backoffice/contentAdminPaintings.twig
@@ -93,8 +93,8 @@
 						
 						{% endif %}
 
-						<a href="index.php?action=deletePainting&amp;id={{ painting.id }}">
-							<button>Supprimer</button>
+						<a href="#" id="delete-painting">
+							<button type="submit" formaction="index.php?action=deletePainting&amp;id={{painting.id}}">Supprimer</button>
 						</a>
 					</div>	
 				</div>			
