Changes on the frontOffice part

--- a/src/views/aboutTemplate.twig
+++ b/src/views/aboutTemplate.twig
@@ -35,10 +35,11 @@
 				Nadie Feuz a été son maître pendant 10 ans, peintre renommée, elle lui a tout appris, du b.a.ba technique jusqu’à l’art de la peinture au couteau. C’est à cette époque que Jeanne-Marie Desmares découvre l’onctuosité de la matière, les contrastes, les couleurs, les « valeurs », les transparences, comment aller à l’essentiel.<br>
 				La Corse a fait le reste, elle s’y installe et affirme son style, épurée et intense. L’huile et le couteau ont sa préférence. Elle peint les reflets des maisons au bord de l’eau, une ruelle, un village, une tour. L’île est une source illimitée d’inspiration. Elle se perfectionne aussi à l’aquarelle.
 				Jeanne-Marie Desmares peint maintenant depuis plus de 20 ans, elle travaille et expose à St Florent et réinterprète au fil des saisons les places et les fontaines.</p>
+				<hr>
 				<h3>L'inspiration - La Corse</h3>
 				<p><span class="image right"><img src="assets/img/corse-1.jpg" alt="" /></span>Comment parler de cet île sans répéter encore et encore qu'elle est de toute beauté. La peinture de Jeanne-Marie Desmares nous rappelle que la Corse est faite de diversité, de lumière de couleur et d'une intensité dont on ne sait pas si elle vient de l'autenticité des villages perchés, de sa nature sauvage et parfois innaccessible, de la couleur du ciel au coucher du soleil, de la variété des paysages. Jeanne-Marie par sa peinture, exprime à merveille cette intensité et par un travail de couleurs vives et contrastées, ses toiles transmettent ce sentiment profond de reconnaissance pour cette terre si généreuse.<br>
 				Saint Florent son village familiale à lui tout seul est une grande source d'inspiration. Des ruelles pavées, une fontaine, des maisons sur l'eau, une citadelle, le port de plaisance, les collines du Cap d'un coté, du désert des agriates de l'autre, un clocher, et cette lumière, encore elle, qui change sans cesse du matin au soir, du printemps à l'hiver, le temps lui aussi fait son oeuvre.<br>
-				Est-ce qu'il lui arrive de peindre autre chose ? Oui, mais c'est plus rare, vous verrez.</p>
+				Est-ce qu'il lui arrive de peindre autre chose ? Oui, mais c'est plus rare, vous verrez. Prenez un peu de l'odeur du maquis et savourez.</p>
 				<hr id="atelier">
 				<h3>L'Atelier</h3>
 				<p><div id="map"></div>Le village de saint Florent se trouve à 35 mn en voiture de Bastia sur la côte opposée. Situé au bord de l'eau, il a gardé son charme authentique. Le petit port de pêche est aujourd'hui un des plus beaux port de plaisance de Corse.<br>
