--- a/src/views/blogPostContent.twig
+++ b/src/views/blogPostContent.twig
@@ -44,7 +44,7 @@
 
                 {% if comment.validated == false %}
 
-                <a href="index.php?action=blog&amp;choice=report&amp;commentId={{comment.id}}&amp;postId={{post.id}}" disabled="disabled" ></a><button class="button smal alt warning" id="">Signaler</button>
+                <a href="index.php?action=blog&amp;choice=report&amp;commentId={{comment.id}}&amp;postId={{post.id}}" disabled="disabled"><button class="button smal alt warning" id="">Signaler</button></a>
 
                 {% endif %}
 
