displaying and stocking date

--- a/src/views/backoffice/contentModifyPainting.twig
+++ b/src/views/backoffice/contentModifyPainting.twig
@@ -25,7 +25,7 @@
 			<label for="height">Hauteur :<input type="text" name="height" value="{{ painting.height }}" class="painting-fields"></label>
 			
 
-			<label for="creation">Date de réalisation :<input type="text" name="creation" value="{{ painting.creation }}" class="painting-fields"></label>
+			<label for="creation">Date de réalisation :<input type="text" name="creation" value="{{ date }}" class="painting-fields"></label>
 			<label for="technic">Technique :<input type="text" name="technic" value="{{ painting.technic }}"></label>
 			<label for="price">Prix :<input type="text" name="price" value="{{ painting.price }}" class="painting-fields"></label>
 			<label for="theme">Thème :<input type="text" name="theme" value="{{ painting.theme }}" class="painting-fields"></label>
