--- a/src/views/blogContent.twig
+++ b/src/views/blogContent.twig
@@ -16,7 +16,7 @@
 		</div>	
 	</div>	
 
-	<p class="post-info">Publié le {{ post.publication }} - {{ post.countComments }} Commentaire(s)</p>
+	<p class="post-info">Publié le {{ post.publication }}</p>
 
 	<footer>
 		<a href="index.php?action=blog&amp;postId={{ post.id }}" class="button small alt">Lire la suite ...</a>
