changer in the view

--- a/src/views/backoffice/contentModifyPainting.twig
+++ b/src/views/backoffice/contentModifyPainting.twig
@@ -39,6 +39,7 @@
 			{% else %}
 			    
 			<select name="category" class="painting-fields">
+					<option value="none">---</option>
 					<option value="paysage">Paysage</option>
 					<option value="scene">Scène</option>
 					<option value="abstrait">Abstrait</option>
