--- a/src/views/backoffice/contentModifyPost.twig
+++ b/src/views/backoffice/contentModifyPost.twig
@@ -8,14 +8,16 @@
 
 			<!-- Content -->
 			<section id="content">
-				<form action="index.php?action=updatePost&amp;id={{ post.id }}" method="POST" class="form-section">
 				
+				<form action="index.php?action=updatePost&amp;id={{ post.id }}" method="POST" class="form-section">
+					<h4>1- Modifier le titre et le texte de l'article</h4>
 					<label for="title">Titre de l'article :<input type="text" name="title" value="{{ post.title }}" class="painting-fields"></label>
 					<p>Ecrit le: {{ post.creation }}</p>
 					<p>{% if post.published %}Publié le:  {{ post.publication }} {% else %} Brouillon {% endif %}</p>
 					
 					<textarea name="content" rows="15">{{ post.content }}</textarea>
-
+					<button type="submit" name="submit" class="button special" id="first-button">Enregister</button>
+					<h4>2- Modifier les catégories</h4>
 					<label for="category">Catégorie(s) de l'article :
 
 							{% if categories == null %}
@@ -48,7 +50,7 @@
 
 					</label>	
 
-					<button type="submit" name="submit" class="button special icon fa-checked">Enregister</button>
+					<button type="submit" name="submit" class="button special">Enregister</button>
 				</form>		
 			</section>
 		</div>
@@ -58,7 +60,7 @@
 			<!-- Sidebar -->
 			<section id="sidebar">
 				<section>
-
+					<h4>Ajouter ou supprimer une image</h4>
 					{% for img in imgs %}
 					
 						<div>
