--- a/src/views/frontendLayout.twig
+++ b/src/views/frontendLayout.twig
@@ -91,7 +91,7 @@
             </div>
             <div class="copyright">
                 &copy; JMD. All rights reserved.
-                <a href="mentions.html"> / Mentions légales</a>
+                <a href="index.php?action=mentions"> / Mentions légales</a>
             </div>
         </div>
 
