--- a/src/views/homeLayout.twig
+++ b/src/views/homeLayout.twig
@@ -70,7 +70,7 @@
 			</div>
 			<div class="copyright">
 				&copy; JMD. All rights reserved.
-				<a href="mentions.html"> / Mentions légales</a>
+				<a href="index.php?action=mentions"> / Mentions légales</a>
 			</div>
 		</div>
 
